# geoclue2to1

./: CMakeLists.txt  LICENSE  README.md
rpm/: geoclue2to1.conf  geoclue2to1.service  geoclue2to1.spec
src/: CMakeLists.txt  geoclue1_backend.cpp  geoclue1_backend.h  geoclue2_client.cpp  geoclue2_client.h  geoclue2_location.cpp  geoclue2_location.h  geoclue2_manager.cpp  geoclue2_manager.h  main.cpp
test/: CMakeLists.txt  geoclue2-test-client.c
